Reactive: Change observable in reactive analyzer. code refactoring